--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Thomas Debelle - Resume
+title: Thomas Debelle - Portfolio
 
 # Your name to show in the footer
 author: Thomas Debelle
@@ -21,10 +21,10 @@ author: Thomas Debelle
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Projects: "projects"
+  Contact:
+    - Linkedin: "https://www.linkedin.com/in/thomas-debelle/"
+    - Mail: "mailto:thomas.debelle@student.kuleuven.be"
 
 ################
 # --- Logo --- #
