--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Thomas Debelle - Portfolio
+title: Thomas Debelle - $$\mathscr{D}$$
 
 # Your name to show in the footer
 author: Thomas Debelle
@@ -21,7 +21,11 @@ author: Thomas Debelle
 
 navbar-links:
   About Me: "aboutme"
-  Projects: "projects"
+  Projects: 
+    - Academic: "tags/#academic projects"
+    - Industry: "tags/#industry projects"
+    - Personal: "tags/#personal projects"
+  Consulting: "consulting"
   Contact:
     - Linkedin: "https://www.linkedin.com/in/thomas-debelle/"
     - Mail: "mailto:thomas.debelle@student.kuleuven.be"
@@ -87,9 +91,10 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: false
-  facebook: false
+  twitter: true
+  facebook: true
   linkedin: true
+  reddit: true
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
