--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Thomas Debelle - $\mathscr{D}$
+title: Thomas Debelle - 𝒟
 
 # Your name to show in the footer
 author: Thomas Debelle
