--- a/_config.yml
+++ b/_config.yml
@@ -167,7 +167,7 @@ footer-hover-col: "#0085A1"
 #################################
 
 # Fill in your Google Analytics tag ID (or "Measurement ID") to track your website usage
-gtag: "G-D207S3XJ5D"
+gtag: "G-LYNZX0Q2Y8"
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
